# APKnife

./: .apknife_history  .gitignore  AndroidManifest.xml  MAINFEST.in  README.md  apknife.py  automation.sh  bandit_report.txt  commands.json  fixed_requirements.txt  new_app.apk  payload_for_test.apk  payload_test.apk  pyproject.toml  requirements.txt  requirements_backup.txt  safety_report.txt  secuirty.sh  security_report.txt  setup.py  setup.sh  updateAPKnife.sh  update_pypi.sh
.github/workflows/: deploy.yml
apknife/: .apknife_history  .gitignore  commands.json
apknife.egg-info/: PKG-INFO  SOURCES.txt
apknife/modules/: .apknife_history  .asc  .gitignore
assets/: .apknife_history  banner.txt
decompiled_apk/: apktool.yml
extract/: resources.arsc
extract/res/: -1.xml  -J.xml  -Z.xml  -_.xml  0M.xml  0U.xml  0x.xml  13.xml  1Z.xml  1t.xml  21.xml  2F.xml  2Y.xml  2a.xml  2f.xml  2i.xml  2j.xml  2w.xml  3A.xml  3I.xml  3h.xml  3v.xml  3x.xml  46.xml  461.xml  4A.xml  4H.xml  4S.xml  4V.xml  4o.xml  4u.xml  4x.xml  51.xml  59.xml  5G.xml  6E.xml  6Q.xml  7D.xml  7G.xml  7R.xml  (+276 more)
extract/res/color-v23/: abc_color_highlight_material.xml
hell/: AndroidManifest.xml  AndroidManifest.xml.orig  apktool.yml
modules/: analyzer.py  api_finder.py  builder.py  catch_rat.py  extract_sensitive.py  extractor.py  interactive_mode.py  java_extractor.py  manifest_editor.py  permission_scanner.py  signer.py  smali_tools.py  vulnerability_scanner.py  xml_decoder.py
source_code/resources/: AndroidManifest.xml  classes.dex
temp_extracted_apk/: classes.dex
tests/: pytest.ini
(+165 files in other folders)
