[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apknife"
version = "1.0.2"
description = "APKnife: A powerful Android penetration testing tool"
authors = [{name = "mrnightmare", email = "hmjani18@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"


dependencies = [
    "setuptools",  # مطلوب لقراءة الملفات
]

[tool.setuptools]
packages = ["apknife"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
